# reef-pi-hass-custom

./: .env.example  .gitignore  .pdm-python  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  LICENSE  README.md  __init__.py  api.py  const.py  hacs.json  manifest.json  mise.toml  pyproject.toml  requirements_test.txt  sensor.py  strings.json  switch.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: bump-version.yml  hacks.yaml  hassfest.yaml  pytest.yaml  release.yml
.mise/tasks/: deploy.sh  release.sh
assets/: icon.xcf
custom_components/reef_pi/: __init__.py  api.py  async_api.py  binary_sensor.py  button.py  config_flow.py  const.py  light.py  manifest.json  mqtt_handler.py  mqtt_name_mapper.py  mqtt_tracker.py  sensor.py  services.yaml  switch.py
custom_components/reef_pi/translations/: en.json  hu.json
docs/plans/: 20260615-mqtt-inlet-ato-realtime.md
docs/plans/completed/: 20260615-mqtt-inlet-ato-realtime.md
reef_pi/: manifest.json  strings.json
scripts/: prepare_release.sh  release.sh
tests/: api_mock.py  api_tests.py  async_api_mock.py  async_api_tests.py  conftest.py  ph_sensor_tests.py  pumps_tests.py  sensor_tests.py  switch_tests.py  test_async_api.py  test_button_display.py  test_calibration_button.py  test_logs.py  test_mqtt_handler.py  test_mqtt_name_mapper.py  test_mqtt_sensors.py  test_mqtt_tracker.py  test_ph_service.py  test_ph_ssensor.py  test_pumps.py  test_sensors.py  test_switch.py
tests/payloads/: ph_probes.json  ph_readings.json
translations/: en.json
