[project]
name = "reef-pi-hass-custom"
version = "0.4.1"
description = "HomeAssistant Reef PI Integration"
dependencies = [ "httpx>=0.27.0",]
requires-python = ">=3.13.2"
readme = "README.md"

[[project.authors]]
name = "tdragon"
email = "tdragn@gmail.com"

[project.license]
text = "MIT"

[dependency-groups]
dev = [ "pytest>=8.1.1", "pytest-homeassistant-custom-component>=0.13.193", "pytest-asyncio>=0.23.6", "ruff>=0.4.0", "pre-commit>=3.7.0",]

[tool.pyright]
venvPath = "."
venv = ".venv"
