[project]
name = "reef-pi-hass-custom"
version = "0.4.5"
description = "HomeAssistant Reef PI Integration"
dependencies = [ "httpx>=0.28.1",]
requires-python = ">=3.13.2"
readme = "README.md"
[[project.authors]]
name = "tdragon"
email = "tdragn@gmail.com"

[dependency-groups]
dev = [ "pytest>=8.1.1", "pytest-homeassistant-custom-component>=0.13.193", "pytest-asyncio>=0.23.6", "ruff>=0.15.10", "pre-commit>=3.7.0", "pyright>=1.1.0",]

[project.license]
text = "MIT"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportIncompatibleVariableOverride = false
reportAttributeAccessIssue = "warning"
exclude = [ "output",]
